--- a/ZXcList.tex
+++ b/ZXcList.tex
@@ -4,98 +4,5 @@
 \input{colors.tex}
 \input{tikzcardsTwo.tex}
 \begin{document}
-\begin{center}\begin{tikzpicture} 
-\cardbackground{Attack} 
-\cardtitle{Bolster} 
-\cardborder{} 
-\cardcontent{Unleash. Any player suffers 3 damage. \newline \Or \newline The nemesis gains one nemesis token.} 
-\cardimage{FinalMan} 
-\cardprice{1} 
-\end{tikzpicture}
-\hspace{-4mm}
-\begin{tikzpicture} 
-\cardbackground{Minion} 
-\cardtitle{Thorned Quka} 
-\cardborder{} 
-\cardcontent{\Persistent: The nemesis gains one nemesis token.} 
-\cardimage{FinalMan} 
-\cardprice{1} 
-\cardhp{4} 
-\end{tikzpicture}
-\hspace{-4mm}
-\begin{tikzpicture} 
-\cardbackground{Power} 
-\cardtitle{Thickened Hide} 
-\cardborder{} 
-\cardcontent{\To \Discard: Spend 5 \Money{}. \newline \Power 2: Unleash. The nemesis gains one nemesis token.} 
-\cardimage{FinalMan} 
-\cardprice{1} 
-\end{tikzpicture}
-\hspace{-4mm}
-\begin{tikzpicture} 
-\cardbackground{Attack} 
-\cardtitle{Unveil} 
-\cardborder{} 
-\cardcontent{Gravehold suffers 6 damage. \newline \Or \newline The nemesis gains two nemesis tokens.} 
-\cardimage{FinalMan} 
-\cardprice{2} 
-\end{tikzpicture}
-\hspace{-4mm}
-\begin{tikzpicture} 
-\cardbackground{Minion} 
-\cardtitle{Inhibiting Drake} 
-\cardborder{} 
-\cardcontent{\Immediately: This minion suffers 1 damage for each nemesis token the nemesis has. \newline \Persistent: Any player suffers 3 damage.} 
-\cardimage{FinalMan} 
-\cardprice{2} 
-\cardhp{14} 
-\end{tikzpicture}
-\hspace{-4mm}
-\begin{tikzpicture} 
-\cardbackground{Power} 
-\cardtitle{Empower Ritual} 
-\cardborder{} 
-\cardcontent{\To \Discard: Spend 7 \Money{}. \newline \Power 3: The nemesis gains two nemesis tokens. Gravehold suffers 4 damage.} 
-\cardimage{FinalMan} 
-\cardprice{2} 
-\end{tikzpicture}
-\hspace{-4mm}
-\begin{tikzpicture} 
-\cardbackground{Attack} 
-\cardtitle{Terminate} 
-\cardborder{} 
-\cardcontent{The nemesis gains two nemesis tokens. \newline Unleash.} 
-\cardimage{FinalMan} 
-\cardprice{3} 
-\end{tikzpicture}
-\hspace{-4mm}
-\begin{tikzpicture} 
-\cardbackground{Minion} 
-\cardtitle{Stabilizing Hulk} 
-\cardborder{} 
-\cardcontent{\Persistent: The nemesis gains one nemesis token. Unleash.} 
-\cardimage{FinalMan} 
-\cardprice{3} 
-\cardhp{15} 
-\end{tikzpicture}
-\hspace{-4mm}
-\begin{tikzpicture} 
-\cardbackground{Power} 
-\cardtitle{The End} 
-\cardborder{} 
-\cardcontent{\Immediately: The nemesis gains 15 life. \Power 4: Unleash eight times.} 
-\cardimage{FinalMan} 
-\cardprice{3} 
-\end{tikzpicture}
-\hspace{-4mm}
-\begin{tikzpicture} 
-\cardbackground{Attack} 
-\cardtitle{Heave} 
-\cardborder{} 
-\cardcontent{The brambles rush Gravehold. \newline Unleash.} 
-\cardimage{VolatileMan} 
-\cardprice{1} 
-\end{tikzpicture}
-\hspace{-4mm}
-\end{center}
+\begin{center}\end{center}
 \end{document}
