--- a/charBoard.tex
+++ b/charBoard.tex
@@ -53,18 +53,18 @@
 	\node[rotate=90] at (-\boardwidth+1, -\boardheight+\cardheight/2+1) {\Huge Deck};
 	\draw (\boardwidth,-\boardheight+1) rectangle (\boardwidth-\cardwidth/2,-\boardheight+\cardheight+1);
 	\node[rotate=270] at (\boardwidth-1, -\boardheight+\cardheight/2+1) {\Huge Discard};
-	\node at (-8, -5) {\LARGE{Life:}};
-	\draw (-6,-6) rectangle (-6+\squarewidth*6,-6+\squareheight);
+	\node at (-8, -4) {\LARGE{Life:}};
+	\draw (-6,-5.1) rectangle (-6+\squarewidth*6,-5.1+\squareheight);
 }
 
 \newcommand{\notes}[1]{
-	\node[text width=7cm, left] at (\squarewidth*.05 - 2, \squareheight*.1 - 2) {\textbf{Notes:} #1};
+	\node[text width=10.5cm, left] at (\squarewidth-.5, \squareheight*.1 - 1) {\textbf{Notes:} #1};
 }
 
 \newcommand{\name}[1]{
-\node at (0, 3) {\LARGE{#1}};
-\draw (-\squarewidth/2,2.5) rectangle (\squarewidth/2, 2.5-\squareheight);
-\node[text width = 2 cm] at (0, 2.5-\squareheight/2) {\begin{center}Player \\ Number\end{center}};
+\node at (0, 4) {\LARGE{#1}};
+\draw (-\squarewidth/2,3.5) rectangle (\squarewidth/2, 3.5-\squareheight);
+\node[text width = 2 cm] at (0, 5-\squareheight) {\begin{center}Player \\ Number\end{center}};
 }
 \newcommand{\startingHand}[5]{
 \pgfmathsetmacro{\handheight}{3}
@@ -114,33 +114,33 @@
 
 \newcommand{\ability}[2]{
 
-\node[text width = 16 cm] at (-1, -6.5) {\textbf{Ability}\\ #1 };
+\node[text width = 16 cm] at (-1, -6.5) {\textbf{Ability -} #1 };
 
 \ifnum 1>#2\relax\else
-\node at (-9+\squarewidth/2, -9.75+\squareheight/2) {\includegraphics[height = 2cm]{chargetest}};
+\node at (-9+\squarewidth/2, -10+\squareheight/2) {\includegraphics[height = 2cm]{chargetest}};
 \fi
 
 \ifnum 2>#2\relax\else
-\node at (-6+\squarewidth/2, -9.75+\squareheight/2) {\includegraphics[height = 2cm]{chargetest}};
+\node at (-6+\squarewidth/2, -10+\squareheight/2) {\includegraphics[height = 2cm]{chargetest}};
 \fi
 
 \ifnum 3>#2\relax\else
-\node at (-3+\squarewidth/2, -9.75+\squareheight/2) {\includegraphics[height = 2cm]{chargetest}};
+\node at (-3+\squarewidth/2, -10+\squareheight/2) {\includegraphics[height = 2cm]{chargetest}};
 \fi
 
 \ifnum 4>#2\relax\else
-\node at (0+\squarewidth/2, -9.75+\squareheight/2) {\includegraphics[height = 2cm]{chargetest}};
+\node at (0+\squarewidth/2, -10+\squareheight/2) {\includegraphics[height = 2cm]{chargetest}};
 \fi
 
 \ifnum 5>#2\relax\else
-\node at (3+\squarewidth/2, -9.75+\squareheight/2) {\includegraphics[height = 2cm]{chargetest}};
+\node at (3+\squarewidth/2, -10+\squareheight/2) {\includegraphics[height = 2cm]{chargetest}};
 \fi
 
 \ifnum 6>#2\relax\else
-\node at (6+\squarewidth/2, -9.75+\squareheight/2) {\includegraphics[height = 2cm]{chargetest}};
+\node at (6+\squarewidth/2, -10+\squareheight/2) {\includegraphics[height = 2cm]{chargetest}};
 \fi
 
 \ifnum 7>#2\relax\else
-\node at (9+\squarewidth/2, -9.75+\squareheight/2) {\includegraphics[height = 2cm]{chargetest}};
+\node at (9+\squarewidth/2, -10+\squareheight/2) {\includegraphics[height = 2cm]{chargetest}};
 \fi
 }
