Updated some formatting on nemesis cards

--- a/ZXcList.tex
+++ b/ZXcList.tex
@@ -4,5 +4,129 @@
 \input{colors.tex}
 \input{tikzcardsTwo.tex}
 \begin{document}
-\begin{center}\end{center}
+\begin{center}\begin{tikzpicture} 
+\cardbackground{Minion} 
+\cardimage{Evolved} 
+\cardtitle{Howling Slayer} 
+\cardborder{} 
+\cardcontent{\Persistent: Gravehold suffers 2 damage. Any player discards a card in hand.} 
+\cardprice{1} 
+\cardhp{9} 
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Minion} 
+\cardimage{Evolved} 
+\cardtitle{Bane Commander} 
+\cardborder{} 
+\cardcontent{\Persistent: Unleash. Any player suffers 2 damage.} 
+\cardprice{1} 
+\cardhp{6} 
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Minion} 
+\cardimage{Evolved} 
+\cardtitle{Needle Doom} 
+\cardborder{} 
+\cardcontent{\Persistent: Unleash. Gravehold suffers 2 damage.} 
+\cardprice{2} 
+\cardhp{12} 
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Minion} 
+\cardimage{Evolved} 
+\cardtitle{Burialskulk} 
+\cardborder{} 
+\cardcontent{\Persistent: Unleash twice.} 
+\cardprice{3} 
+\cardhp{17} 
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Minion} 
+\cardimage{general2} 
+\cardtitle{Cauterizer} 
+\cardborder{} 
+\cardcontent{\Persistent: The player with the fewest opened breaches suffers 2 damage.} 
+\cardprice{2} 
+\cardhp{10} 
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Power} 
+\cardimage{general2} 
+\cardtitle{Eye of Nothing} 
+\cardborder{} 
+\cardcontent{\To \Discard: Spend 6 \Money{}. \newline \Power 2: Unleash. Any player loses 2 charges \newline \Or \newline Unleash twice.} 
+\cardprice{1} 
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Power} 
+\cardimage{general2} 
+\cardtitle{Gravity Splinter} 
+\cardborder{} 
+\cardcontent{\To \Discard: Spend 7 \Money{}. \newline \Power 2: Unleash. Any player suffers 2 damage and the players collectively discard three cards in hand.} 
+\cardprice{2} 
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Minion} 
+\cardimage{general2} 
+\cardtitle{Haze Spewer} 
+\cardborder{} 
+\cardcontent{\Persistent: Any player suffers 2 damage.} 
+\cardprice{1} 
+\cardhp{5} 
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Minion} 
+\cardimage{general2} 
+\cardtitle{Jagged One} 
+\cardborder{} 
+\cardcontent{\Persistent: Unleash twice.} 
+\cardprice{3} 
+\cardhp{15} 
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Attack} 
+\cardimage{general2} 
+\cardtitle{Lay Waste} 
+\cardborder{} 
+\cardcontent{Unleash twice. Any player suffers 2 damage.} 
+\cardprice{2} 
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Power} 
+\cardimage{general2} 
+\cardtitle{Reality Rupture} 
+\cardborder{} 
+\cardcontent{\To \Discard: Destroy two prepped spells that each cost 3 \Money{} or more. \newline \Power 1: Unleash three times.} 
+\cardprice{3} 
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Attack} 
+\cardimage{general2} 
+\cardtitle{Slaughter} 
+\cardborder{} 
+\cardcontent{Unleash. Gravehold suffers 3 damage.} 
+\cardprice{1} 
+\end{tikzpicture}
+\hspace{-4mm}
+\begin{tikzpicture} 
+\cardbackground{Power} 
+\cardimage{general2} 
+\cardtitle{Spewed Haze} 
+\cardborder{} 
+\cardcontent{\To \Discard: Spend 6 \Money{}. \newline \Power 2: Unleash. The player with the lowest life suffers 2 damage. } 
+\cardprice{1} 
+\end{tikzpicture}
+\hspace{-4mm}
+\end{center}
 \end{document}
