--- a/tikzcardsTwoTTS.tex
+++ b/tikzcardsTwoTTS.tex
@@ -1,18 +1,6 @@
 %   COMMANDS ZUM ZUSAMMENBAUEN DER KARTEN
 %   ---------------------------------------
 
-%   TikZ/PGF Settings für die Karten
-\pgfmathsetmacro{\cardwidth}{6}
-\pgfmathsetmacro{\cardheight}{8.5}
-\pgfmathsetmacro{\imagewidth}{\cardwidth}
-\pgfmathsetmacro{\imageheight}{0.75*\cardheight}
-\pgfmathsetmacro{\stripwidth}{0.7}
-\pgfmathsetmacro{\strippadding}{0.2}
-\pgfmathsetmacro{\textpadding}{0.1}
-\pgfmathsetmacro{\titley}{.94*\cardheight}
-\pgfmathsetmacro{\titlex}{2.3}
-
-
 \newcommand{\And}{\textbf{AND} \newline}
 \newcommand{\Cast}{\textbf{Cast}}
 \newcommand{\Persistent}{\textbf{PERSISTENT}}
@@ -34,6 +22,17 @@
 \newcommand{\Attach}{\textbf{Attach} }% If this deals more than its base damage, }
 \newcommand{\Shadow}{\textbf{Shadow:}} %Place a Shadow token on a minion. Prevent all damage dealt to a minion with a shadow token. Players can reduce a shadowed minion's life by spending \Money{}.}
 %   TikZ/PGF Settings für die Karten
+\pgfmathsetmacro{\cardwidth}{18}
+\pgfmathsetmacro{\cardheight}{25.5}
+\pgfmathsetmacro{\imagewidth}{\cardwidth}
+\pgfmathsetmacro{\imageheight}{0.75*\cardheight}
+\pgfmathsetmacro{\stripwidth}{0.7}
+\pgfmathsetmacro{\strippadding}{0.2}
+\pgfmathsetmacro{\textpadding}{0.1}
+\pgfmathsetmacro{\titley}{.94*\cardheight}
+\pgfmathsetmacro{\titlex}{2.15}
+
+
 
 %   Formen der einzelnen Kartenelemente/-bestandteile
 \def\shapeCard{(0,0) rectangle (\cardwidth,\cardheight)}
@@ -59,71 +58,84 @@
 
 
 \newcommand{\InvMoney}{\includegraphics[height = .6cm]{InvMoney}}
-\newcommand{\Health}{\includegraphics[height = .6cm]{heart}}
+\newcommand{\Health}{\includegraphics[height = .4cm]{heart}}
+\newcommand{\Shield}{\includegraphics[height = .6cm]{shield}}
 
 %   Rahmen der Karte
-\newcommand{\cardborder}{
-    \draw[cardcorners] \shapeCard;
-}
+%\newcommand{\cardborder}{
+%    \draw[lightgray,cardcorners] \shapeCard;
+%}
 
-\newcommand{\cardhp}[1]{
-		\node[left] at (\cardwidth-\stripwidth*.45,\cardheight-6.2*\stripwidth) {\textbf{\LARGE #1} \Health};
-}
-\newcommand{\cardtier}[1]{
-		\node at (\cardwidth/8,\cardheight/8) {#1};
-}
-
-\newcommand{\modifier}{
-\node[rotate=270] at (.5,6) {\textbf{\Large{\uppercase{Modifier}}}};
-}
 %   Hintergrund der Karte
 \newcommand{\cardbackground}[1]{
 		\clip[cardcorners] \shapeCard;
-		%\draw[fill=white] (\cardwidth-.2,\cardheight-.2)--(.2,\cardheight-.2)--(.2,.2)--(\cardwidth-.2,.2)--cycle;
-    %\node at (\cardwidth/2, \cardheight/2) {\includegraphics[height = 9.5cm]{#1}};
-		\node[rotate=90] at (.5,6) {\textbf{\Large{\uppercase{#1}}}};
+    \node at (\cardwidth/2, \cardheight/2) {\includegraphics[height = 9.5cm]{#1}};
 }
 
-\newcommand{\modcardbackground}[1]{
-		\clip[cardcorners] \shapeCard;
-		%\draw[fill=white] (\cardwidth-.2,\cardheight-.2)--(.2,\cardheight-.2)--(.2,.2)--(\cardwidth-.2,.2)--cycle;
-		\node at (\cardwidth-4*\stripwidth, \cardheight-\stripwidth) {\textbf{\Large{\uppercase{#1}}}};
+\newcommand{\attentioncardbackround}[1]{
+  \cardbackground{#1}
+  % Add a pattern to the cards
+  \draw[pattern=dots](0, \cardheight/2) rectangle (\cardwidth, \cardheight);
 }
 
 \newcommand{\cardtitle}[1]{
-    \node[text width=3cm, below right] at (2,8.3) {
+    \node[text width=2.75cm, below right] at (\titlex,\titley) {
+        
        \shadowtext{\parbox{2.8cm}{\begin{spacing}{1.2}\textbf{\hspace{-.5cm}\uppercase{\Large #1}}\end{spacing}}}
+        
     };
 }
-\newcommand{\modcardtitle}[1]{
-    \node[text width=3cm, below right, rotate=270] at (\cardwidth*.95, \cardheight*.8) {
-       \shadowtext{\parbox{2.8cm}{\begin{spacing}{1.2}\textbf{\hspace{-.5cm}\uppercase{\Large #1}}\end{spacing}}}
-    };
+\newcommand{\cardstorycontent}[1]{
+	\node[text width=4.7cm, below right] at (\stripwidth*1.2, .85*\cardheight) {\textrm{#1}};
+}
+\newcommand{\evolve}[1]{
+	\node[text width=4.4cm, below right] at (\cardwidth/12, 0.52*\cardheight) {\footnotesize{#1}};
 }
 \newcommand{\cardcontent}[1]{
     %\node[text width=4.5cm] at (\cardwidth/2, 0.35*\cardheight) {#1};
-		\node[text width=4.4cm, below right] at (\stripwidth*1.1, 0.46*\cardheight) {\textrm{#1}};
+		\node[text width=4.5cm, below right] at (\stripwidth*1.02, 0.535*\cardheight) {\textrm{#1}};
 }
 
-\newcommand{\modcardcontent}[1]{
-		\node[text width=3.5cm, below right, rotate=270] at (\cardwidth-\stripwidth*1.1, 0.46*\cardheight) {\textrm{#1}};
+\newcommand{\tier}[1]{
+    %\node[text width=4.5cm] at (\cardwidth/2, 0.35*\cardheight) {#1};
+		\node at (\cardwidth/8, \cardheight/12) {\tiny{#1}};
 }
 
+\newcommand{\delay}[1]{
+		\node at (\cardwidth*.9, \cardheight/8) {#1};
+}
 \newcommand{\cardimage}[1]{
-	\node at (\cardwidth*.6, \cardheight*.65) {\includegraphics[height = 2.5cm]{#1}};
-}
-
-
-\newcommand{\modcardimage}[2]{
-	\node[rotate=270] at (\cardwidth*.5, \cardheight*.65) {\includegraphics[height = 2.5cm]{#1}};
-	\node at (.5, \cardheight-.5) {\includegraphics[height = .8cm]{#2}};
-}
-
-
-\newcommand{\player}[1]{
-	\node at (.5, .5) {\includegraphics[height = .8cm]{#1}};
+	\node at (\cardwidth*.56, \cardheight*.67) {\includegraphics[height = 2.3cm]{#1}};
 }
 
 \newcommand{\cardprice}[1]{
-		\node at (\stripwidth*1.7,\cardheight-1.2*\stripwidth) {\textbf{\LARGE #1}};
+		%\pgfmathsetmacro{\x}{(2+#1)/12}
+		%\pgfmathsetmacro{\redvalue}{255-(45*\x*\x)}
+		%\pgfmathsetmacro{\greenvalue}{255-(85*\x*\x)}
+		%\pgfmathsetmacro{\bluevalue}{255*(1-\x)*(1-\x)}
+		\pgfmathsetmacro{\x}{(#1)/10}
+		\pgfmathsetmacro{\redvalue}{(1-\x)*(1-\x)*0+2*\x*(1-\x)*275+\x*\x*200}
+		\pgfmathsetmacro{\greenvalue}{(1-\x)*(1-\x)*100+2*\x*(1-\x)*275+\x*\x*100}
+		\pgfmathsetmacro{\bluevalue}{(1-\x)*(1-\x)*200+2*\x*(1-\x)*275+\x*\x*0}
+		%\definecolor{currentcolor}{RGB}{\redvalue, \greenvalue,\bluevalue}
+		\definecolor{currentcolor}{RGB}{255, 255,255}
+    %\node at (\stripwidth*1.8,\cardheight-.8*\stripwidth) {\InvMoney};
+		\node at (\stripwidth*1.7,\cardheight-1.1*\stripwidth) {\color{black} \textbf{\LARGE #1}}; %change black to currentcolor to get gradient back
 }
+
+\newcommand{\cardhp}[1]{
+		\node[left] at (\cardwidth*.93,\cardheight*.78) {\textbf{\Large #1}\Health};
+}
+\newcommand{\cardshield}[1]{
+		\node[left] at (\cardwidth*.3+\stripwidth*.45,\cardheight-6.2*\stripwidth) {\textbf{\LARGE #1} \Shield};
+}
+
+\newcommand{\sync}[1]{
+	\node at (\cardwidth-2*\stripwidth-.20, \stripwidth) {v#1};
+}
+
+\newcommand{\cardborder}{
+    \draw[black, cardcorners, ultra thick] \shapeCard;
+}
+
+
